# personal-typst-browser

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Readme.md
pages/: login.html
src/: browser.rs  main.css  main.rs  setup_surrealdb.rs  state.rs  static_files.rs  typst.rs
src/auth/: login.rs  logout.rs  middleware.rs  mod.rs
styles/: browser.css  login.css  main.css
